--- a/food_network/index.html
+++ b/food_network/index.html
@@ -14,15 +14,16 @@
 
 text {
   font-family: sans-serif;
-  font-size: 0.5vw;
+  font-size: 1.2vh;
 }
+
 
 </style>
 <svg width="1200" height="800"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
 
-var svg = d3.select("svg"),
+var svg = d3.select("svg");
     width = +svg.attr("width"),
     height = +svg.attr("height");
 
