--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </a>
   </div>
   <div class = "fl w-70 mh4 measure-wide">
-    <h3 class = "f3 sans-serif">London Nightlive Visualisation</h3>
+    <h3 class = "f3 sans-serif">London Nightlife Visualisation</h3>
     <p class = "f5 lh-copy baskerville">
       An interactive and animated map visualisation created to show the rhythms of London's nightlife.
     </p>
@@ -99,7 +99,7 @@
   <div class = "fl w-70 mh4 measure-wide">
     <h3 class = "f3 sans-serif">Mapping Tools Comparison</h3>
     <p class = "f5 lh-copy baskerville">
-      A university assignment to eplore a dataset using two different applications.
+      A university assignment to explore a dataset using two different applications.
     </p>
     <p class = "f5 lh-copy baskerville">
       I used data from the Oxford Internet Institute on digital inequality in England to
@@ -124,7 +124,7 @@
     </p>
     <p class = "f5 lh-copy baskerville">
       It runs keyword matching on open data from the Charity Commission and 360 Giving
-      to identify charity missions which align with DataKind's objectives and allows the user to explore
+      to identify charities with aims that match DataKind's objectives and allows the user to explore
       the results in an interactive dashboard. Created with Python and Bokeh.
     </p>
   </div>
