add links to homepage

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       I’m a data enthusiast with a passion for coding and mapping, and interests in
       open data, tech for good, algorithmic transparency and civic tech. <br> <br>
       I split my time studying for a masters in spatial data science & visualisation
+      at <a href="https://www.ucl.ac.uk/bartlett/casa/">CASA</a>, UCL
       and working as a data analyst in the customer insight team at John Lewis. <br> <br>
       Below are some of the pieces of work I've completed over the last year or so.
     </p>
@@ -64,7 +65,8 @@
       modelled NO2 levels from the London Atmospheric Emissions Inventory.
     </p>
     <p class = "f5 lh-copy baskerville">
-      Created using shiny and leaflet.
+      Created using R <a href="https://shiny.rstudio.com/">Shiny</a> and
+      <a href="https://rstudio.github.io/leaflet/">Leaflet</a>.
     </p>
   </div>
 
