add dissertation section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <p class = "f4 lh-copy baskerville">
       I’m a data enthusiast with a passion for coding and mapping, and interests in
       open data, tech for good, algorithmic transparency and civic tech. <br> <br>
-      I split my time studying for a masters in spatial data science & visualisation
+      I split my time studying for an MSc in Spatial Data Science & Visualisation
       at <a href="https://www.ucl.ac.uk/bartlett/casa/">CASA</a>, UCL
       and working as a data analyst in the customer insight team at John Lewis. <br> <br>
       Below are some of the pieces of work I've completed over the last year or so.
@@ -49,6 +49,33 @@
 </section>
 
 <section class="fl w-100 ph5-ns mt1 cs w-100 bg-white-10">
+
+
+    <div class = "fl w-30 pa2 dim pointer">
+      <a href = "https://github.com/greg-slater/dissertation">
+        <img src="images/dissertation_500.png" class="mw-100" alt="atmosphere thumbnail">
+      </a>
+    </div>
+
+    <div class = "fl w-70 mh4 measure-wide">
+      <h3 class = "f3 sans-serif">Masters Dissertation</h3>
+      <p class = "f5 lh-copy baskerville">
+        A research project focussed on creating a measure of demand for Green Infrastructure
+        in London, completed in collaboration with <a href="https://www.westminster.gov.uk/">
+          Westminster City Council</a>. The
+        github <a href="https://github.com/greg-slater/dissertation">page</a> has
+        an executive summary as well as links to the full pdf, code, data and all
+        the final visualisations produced.
+      </p>
+      <p class = "f5 lh-copy baskerville">
+        Created using a wide variety of tools, but largely R for analysis, charts
+        and maps, as well as <a href="https://www.latex-project.org/">LaTeX</a>
+        for producing the final pdf document.
+      </p>
+    </div>
+
+    <div class = "fl w-100 pa3"></div>
+    <div class = "fl w-100 pa3 bt b--light-gray"></div>
 
 
   <div class = "fl w-30 pa2 dim pointer">
