--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <p class = "f4 lh-copy baskerville">
       I’m a data enthusiast with a passion for coding and mapping, and interests in
       open data, tech for good, algorithmic transparency and civic tech. <br> <br>
-      I split my time studying for an MSc in Spatial Data Science & Visualisation
-      at <a href="https://www.ucl.ac.uk/bartlett/casa/">CASA</a>, UCL
-      and working as a data analyst in the customer insight team at John Lewis. <br> <br>
+      I currently work as a data analyst in the customer insight team at John Lewis,
+      and have just completed an MSc in Spatial Data Science & Visualisation
+      at <a href="https://www.ucl.ac.uk/bartlett/casa/">CASA</a>, UCL. <br> <br>
       Below are some of the pieces of work I've completed over the last year or so.
     </p>
   </div>
