add riley section

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     <p class = "f4 lh-copy baskerville">
       I’m a data enthusiast with a passion for coding and mapping, and interests in
       open data, tech for good, algorithmic transparency and civic tech. <br> <br>
-      I currently work as a data analyst in the customer insight team at John Lewis,
-      and have just completed an MSc in Spatial Data Science & Visualisation
-      at <a href="https://www.ucl.ac.uk/bartlett/casa/">CASA</a>, UCL. <br> <br>
-      Below are some of the pieces of work I've completed over the last year or so.
+      Last year I completed an MSc in Spatial Data Science & Visualisation
+      at <a href="https://www.ucl.ac.uk/bartlett/casa/">CASA</a>, UCL, and I currently work
+      as a data analyst at the <a href="https://europe.edf.org/">Environemtal Defense Fund Europe</a>. <br> <br>
+      Below are some of the pieces of work I've completed over the last couple of years.
     </p>
   </div>
 </section>
@@ -49,6 +49,31 @@
 </section>
 
 <section class="fl w-100 ph5-ns mt1 cs w-100 bg-white-10">
+
+
+  <div class = "fl w-30 pa2 dim pointer">
+    <a href = "https://greg-slater.github.io/riley">
+      <img src="images/riley_500.png" class="mw-100" alt="riley thumbnail">
+    </a>
+  </div>
+
+  <div class = "fl w-70 mh4 measure-wide">
+    <h3 class = "f3 sans-serif">Bridget Riley Print Generator</h3>
+    <p class = "f5 lh-copy baskerville">
+      A very quick and fun experiment to create a digital imitation of a Bridget Riley print, after being inspired by the
+       <a href="https://www.southbankcentre.co.uk/venues/hayward-gallery/past-exhibitions/bridget-riley">
+        incredible exhibition</a> at the Southbank Centre in January.
+    </p>
+    <p class = "f5 lh-copy baskerville">
+      Made using <a href="https://p5js.org/">P5.js</a>.
+    </p>
+  </div>
+
+  <div class = "fl w-100 pa3"></div>
+  <div class = "fl w-100 pa3 bt b--light-gray"></div>
+
+
+<!-- BREAK -->
 
 
     <div class = "fl w-30 pa2 dim pointer">
@@ -78,6 +103,8 @@
     <div class = "fl w-100 pa3 bt b--light-gray"></div>
 
 
+<!-- BREAK -->
+
   <div class = "fl w-30 pa2 dim pointer">
     <a href = "https://greg-slater.shinyapps.io/shiny_app/">
       <img src="images/atmosphere_500.png" class="mw-100" alt="atmosphere thumbnail">
@@ -100,6 +127,9 @@
   <div class = "fl w-100 pa3"></div>
   <div class = "fl w-100 pa3 bt b--light-gray"></div>
 
+
+<!-- BREAK -->
+
   <div class = "fl w-30 pa2 dim pointer">
     <a href = "yelp/index.html">
       <img src="images/yelp_500.png" class="mw-100" alt="yelp thumbnail">
@@ -118,6 +148,9 @@
 
   <div class = "fl w-100 pa3"></div>
   <div class = "fl w-100 pa3 bt b--light-gray"></div>
+
+
+<!-- BREAK -->
 
   <div class = "fl w-30 pa2 dim pointer">
     <a href = "https://github.com/greg-slater/GIS">
@@ -138,6 +171,9 @@
 
   <div class = "fl w-100 pa3"></div>
   <div class = "fl w-100 pa3 bt b--light-gray"></div>
+
+
+<!-- BREAK -->
 
   <div class = "fl w-30 pa2 dim pointer">
     <a href = "https://github.com/greg-slater/charity_search">
@@ -161,6 +197,9 @@
   <div class = "fl w-100 pa3"></div>
   <div class = "fl w-100 pa3 bt b--light-gray"></div>
 
+
+<!-- BREAK -->
+
   <div class = "fl w-30 pa2 dim pointer">
     <a href = "https://greg-slater.github.io">
       <img src="images/website_500.png" class="mw-100" alt="charity thumbnail">
@@ -177,6 +216,9 @@
 
   <div class = "fl w-100 pa3"></div>
   <div class = "fl w-100 pa3 bt b--light-gray"></div>
+
+
+<!-- BREAK -->
 
   <div class = "fl w-100 pa3"></div>
   <div class = "fl w-100 f7 pa3 black-40">Icons made by <a href="https://www.flaticon.com/authors/simpleicon" title="SimpleIcon">SimpleIcon</a> from <a href="https://www.flaticon.com/" 		    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 		    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
