--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       open data, tech for good, algorithmic transparency and civic tech. <br> <br>
       Last year I completed an MSc in Spatial Data Science & Visualisation
       at <a href="https://www.ucl.ac.uk/bartlett/casa/">CASA</a>, UCL, and I currently work
-      as a data analyst at the <a href="https://europe.edf.org/">Environemtal Defense Fund Europe</a>. <br> <br>
+      as a data analyst at the <a href="https://europe.edf.org/">Environmental Defense Fund Europe</a>. <br> <br>
       Below are some of the pieces of work I've completed over the last couple of years.
     </p>
   </div>
