--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
   <div class = "fl w-70 mh4 measure-wide">
     <h3 class = "f3 sans-serif">Mapping Tools Comparison</h3>
     <p class = "f5 lh-copy baskerville">
-      A university assignment to explore a dataset using two different applications.
+      A masters assignment to explore a dataset using two different applications.
     </p>
     <p class = "f5 lh-copy baskerville">
       I used data from the Oxford Internet Institute on digital inequality in England to
