add latest work

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
   <div class="fl w-70">
     <h2 class = "f2 lh-title sans-serif">About Me</h2>
     <p class = "f4 lh-copy baskerville">
-      I’m a data enthusiast with a passion for coding and mapping, and interests in
-      open data, tech for good, algorithmic transparency and civic tech. <br> <br>
-      Last year I completed an MSc in Spatial Data Science & Visualisation
-      at <a href="https://www.ucl.ac.uk/bartlett/casa/">CASA</a>, UCL, and I currently work
-      as a data analyst at the <a href="https://europe.edf.org/">Environmental Defense Fund Europe</a>. <br> <br>
+      I’m a data analyst with a passion for coding and creative visualisations,
+      and interests in open data, cities & urban mobility, maps, and sustainability. <br> <br>
+      I currently work as a data analyst at the <a href="https://europe.edf.org/">Environmental Defense Fund Europe</a>,
+      where I’ve been responsible for turning large and complex datasets into stories
+      which help advocate for policy solutions to London’s air pollution problem. <br> <br>
       Below are some of the pieces of work I've completed over the last couple of years.
     </p>
   </div>
@@ -46,6 +46,46 @@
 <section class="fl w-100 ph5-ns mt1 cs w-100 bg-white-10">
 
 
+  <!-- PROJECT LIST -->
+
+      <div class = "fl w-30 pa2 dim pointer">
+        <a href = "https://www.globalcleanair.org/innovative-air-quality-monitoring/london-uk/">
+          <img src="images/breathe_london_500.png" class="mw-100" alt="breathe london thumbnail">
+        </a>
+      </div>
+
+      <div class = "fl w-70 mh4 measure-wide">
+        <h3 class = "f3 sans-serif">Working on the Breathe London project</h3>
+        <p class = "f5 lh-copy baskerville">
+          My responsibility at EDF Europe has been to bring to life the data produced
+          by the <a href='https://www.globalcleanair.org/innovative-air-quality-monitoring/london-uk/'>Breathe London project</a>; a cutting edge, multi-year air quality monitoring
+          campaign in London, which used both car-mounted, mobile and low-cost, stationary sensors. I contributed analyses and visualisations to the following pieces of work:
+        </p>
+
+          <li class = "f5 lh-copy baskerville"><a href="https://www.edf.org/media/young-activists-and-nhs-doctors-warn-breathing-kills-london-air-pollution-hits-deprived-areas">Inequality in air pollution exposure</a>, featured in <a href="https://www.theguardian.com/environment/2021/mar/11/london-teenagers-road-signs-highlight-effect-of-toxic-air-on-people-of-colour">The Guardian</a>, <a href="https://www.standard.co.uk/news/london/choked-up-hijack-road-signs-catford-brixton-whitechapel-air-pollution-impacts-bame-communities-b923643.html">Evening Standard</a>, and <a href="https://www.bbc.co.uk/news/uk-england-london-56372704">BBC News</a>.</li>
+
+          <li class = "f5 lh-copy baskerville"><a href='https://www.globalcleanair.org/health/londons-major-roads-are-noisy-polluted-and-outdated-its-time-to-make-these-roads-healthier-and-more-equitable/'>Pollution effects</a>
+ of <a href='https://www.edf.org/media/parent-and-teen-campaigners-demand-action-after-study-reveals-nearly-50000-london-school'>major roads</a>, referenced in <a href='https://www.theguardian.com/environment/2021/jun/04/pollutionwatch-time-to-rethink-londons-red-routes?edf=145'>The Guardian</a>
+ and <a href='https://www.bigissue.com/latest/environment/dangerous-levels-of-air-pollution-near-london-schools-say-parents-groups/'>The Big Issue</a>.</li>
+
+          <li class = "f5 lh-copy baskerville"><a href='https://www.edf.org/media/london-parent-groups-warn-diesel-buses-choking-young-children'>Pollution effects of diesel buses</a>, featured in <a href='https://www.bigissue.com/latest/environment/the-wheels-on-the-bus-make-toxic-air-parents-call-for-action-on-pollution/'>The Big Issue</a>.</li>
+
+          <li class = "f5 lh-copy baskerville"><a href='https://www.globalcleanair.org/london/londons-major-roads-are-putting-children-at-risk-of-developing-asthma/'>Health risks of major road pollution</a>.</li>
+
+          <li class = "f5 lh-copy baskerville"><a href='https://www.globalcleanair.org/health/deprived-and-bame-schoolchildren-in-london-experience-greater-air-pollution-burden/'>Pollution levels at London primary schools</a>, used for <a href='https://www.london.gov.uk/about-us/london-assembly/london-assembly-publications/clearing-air-pollution-london'>London Assembly report</a>.</li>
+
+          <li class = "f5 lh-copy baskerville"><a href='https://www.edfeurope.org/news/2020/05/10/how-we-used-machine-learning-get-better-estimate-londons-no2-pollution-reduction'>COVID-19 impacts on pollution levels</a>.</li>
+
+          <li class = "f5 lh-copy baskerville"><a href='https://www.edfeurope.org/news/2020/15/09/traffic-congestion-increasing-london-above-2019-levels-outside-city-centre'>COVID-19 impacts on congestion</a>, featured in <a href='https://www.theguardian.com/environment/2020/sep/15/road-congestion-levels-in-outer-london-higher-than-before-lockdown'>The Guardian</a>.</li>
+
+
+      </div>
+
+      <div class = "fl w-100 pa3"></div>
+      <div class = "fl w-100 pa3 bt b--light-gray"></div>
+
+  <!-- BREAK -->
+
     <div class = "fl w-30 pa2 dim pointer">
       <a href = "yelp/index.html">
         <img src="images/yelp_500.png" class="mw-100" alt="yelp thumbnail">
@@ -57,8 +97,10 @@
         An interactive and animated map visualisation created to show the rhythms of London's nightlife.
       </p>
       <p class = "f5 lh-copy baskerville">
-        Created using <a href="https://p5js.org/">P5.js</a>, <a href="https://mappa.js.org/">Mappa.js</a>,
-        and <a href="https://www.mapbox.com/">Mapbox</a>.
+        The data was gathered using Python scripts to query the <a href="https://www.yelp.com/developers/documentation/v3">Yelp API</a>
+        to find business locations and opening hours. The visualisation was created using the javascript libraries
+        <a href="https://p5js.org/">P5.js</a> and <a href="https://mappa.js.org/">Mappa.js</a>,
+        as well as <a href="https://www.mapbox.com/">Mapbox</a>.
       </p>
     </div>
 
@@ -67,6 +109,35 @@
 
 
   <!-- BREAK -->
+
+
+  <div class = "fl w-30 pa2 dim pointer">
+    <a href = "https://greg-slater.github.io/food_network/">
+      <img src="images/food_500.png" class="mw-100" alt="atmosphere thumbnail">
+    </a>
+  </div>
+
+  <div class = "fl w-70 mh4 measure-wide">
+    <h3 class = "f3 sans-serif">Italian recipe ingredients</h3>
+    <p class = "f5 lh-copy baskerville">
+      A bit of an experiment into web scraping and visualisation using a
+      topic of significant interest to me: cooking.
+    </p>
+    <p class = "f5 lh-copy baskerville">
+      First, I used the Python package <a href="https://www.crummy.com/software/BeautifulSoup/">Beautiful Soup</a>
+      to scrape every ingredient from any recipe classed as Italian on the BBC food website.
+      Then, after a bit of analysis used <a href="https://d3js.org/">D3</a> to create
+      a network style visualisation to show how common ingredients are, and what other
+      ingredients they tend to appear alongside.
+    </p>
+  </div>
+
+  <div class = "fl w-100 pa3"></div>
+  <div class = "fl w-100 pa3 bt b--light-gray"></div>
+
+
+<!-- BREAK -->
+
 
       <div class = "fl w-30 pa2 dim pointer">
         <a href = "https://github.com/greg-slater/dissertation">
