update EDF projects list

--- a/index.html
+++ b/index.html
@@ -54,30 +54,23 @@
         </a>
       </div>
 
+      <!-- <a href="link">text</a> -->
+
       <div class = "fl w-70 mh4 measure-wide">
         <h3 class = "f3 sans-serif">Working on the Breathe London project</h3>
         <p class = "f5 lh-copy baskerville">
           My responsibility at EDF Europe has been to bring to life the data produced
           by the <a href='https://www.globalcleanair.org/innovative-air-quality-monitoring/london-uk/'>Breathe London project</a>; a cutting edge, multi-year air quality monitoring
-          campaign in London, which used both car-mounted, mobile and low-cost, stationary sensors. I contributed analyses and visualisations to the following pieces of work:
+          campaign in London, which used both car-mounted, mobile and low-cost, stationary sensors.
         </p>
-
-          <li class = "f5 lh-copy baskerville"><a href="https://www.edf.org/media/young-activists-and-nhs-doctors-warn-breathing-kills-london-air-pollution-hits-deprived-areas">Inequality in air pollution exposure</a>, featured in <a href="https://www.theguardian.com/environment/2021/mar/11/london-teenagers-road-signs-highlight-effect-of-toxic-air-on-people-of-colour">The Guardian</a>, <a href="https://www.standard.co.uk/news/london/choked-up-hijack-road-signs-catford-brixton-whitechapel-air-pollution-impacts-bame-communities-b923643.html">Evening Standard</a>, and <a href="https://www.bbc.co.uk/news/uk-england-london-56372704">BBC News</a>.</li>
-
-          <li class = "f5 lh-copy baskerville"><a href='https://www.globalcleanair.org/health/londons-major-roads-are-noisy-polluted-and-outdated-its-time-to-make-these-roads-healthier-and-more-equitable/'>Pollution effects</a>
- of <a href='https://www.edf.org/media/parent-and-teen-campaigners-demand-action-after-study-reveals-nearly-50000-london-school'>major roads</a>, referenced in <a href='https://www.theguardian.com/environment/2021/jun/04/pollutionwatch-time-to-rethink-londons-red-routes?edf=145'>The Guardian</a>
- and <a href='https://www.bigissue.com/latest/environment/dangerous-levels-of-air-pollution-near-london-schools-say-parents-groups/'>The Big Issue</a>.</li>
-
-          <li class = "f5 lh-copy baskerville"><a href='https://www.edf.org/media/london-parent-groups-warn-diesel-buses-choking-young-children'>Pollution effects of diesel buses</a>, featured in <a href='https://www.bigissue.com/latest/environment/the-wheels-on-the-bus-make-toxic-air-parents-call-for-action-on-pollution/'>The Big Issue</a>.</li>
-
-          <li class = "f5 lh-copy baskerville"><a href='https://www.globalcleanair.org/london/londons-major-roads-are-putting-children-at-risk-of-developing-asthma/'>Health risks of major road pollution</a>.</li>
-
-          <li class = "f5 lh-copy baskerville"><a href='https://www.globalcleanair.org/health/deprived-and-bame-schoolchildren-in-london-experience-greater-air-pollution-burden/'>Pollution levels at London primary schools</a>, used for <a href='https://www.london.gov.uk/about-us/london-assembly/london-assembly-publications/clearing-air-pollution-london'>London Assembly report</a>.</li>
-
-          <li class = "f5 lh-copy baskerville"><a href='https://www.edfeurope.org/news/2020/05/10/how-we-used-machine-learning-get-better-estimate-londons-no2-pollution-reduction'>COVID-19 impacts on pollution levels</a>.</li>
-
-          <li class = "f5 lh-copy baskerville"><a href='https://www.edfeurope.org/news/2020/15/09/traffic-congestion-increasing-london-above-2019-levels-outside-city-centre'>COVID-19 impacts on congestion</a>, featured in <a href='https://www.theguardian.com/environment/2020/sep/15/road-congestion-levels-in-outer-london-higher-than-before-lockdown'>The Guardian</a>.</li>
-
+        <p class = "f5 lh-copy baskerville">
+          <a href="https://greg-slater.github.io/edf/EDF Europe data stories master list July 2021.pdf">This document</a>
+          lists pieces of work that I contributed analyses and visualisations
+          to, some of which were covered by major new outlets, including <a href="https://www.theguardian.com/environment/2021/mar/11/london-teenagers-road-signs-highlight-effect-of-toxic-air-on-people-of-colour">The</a>
+          <a href="https://www.theguardian.com/environment/2020/sep/15/road-congestion-levels-in-outer-london-higher-than-before-lockdown">Guardian</a>,
+          <a href="https://www.bbc.co.uk/news/uk-england-london-56372704">BBC News</a>, and
+          <a href="https://www.standard.co.uk/news/london/choked-up-hijack-road-signs-catford-brixton-whitechapel-air-pollution-impacts-bame-communities-b923643.html">Evening Standard</a>.
+        </p>
 
       </div>
 
